Make sure search bar visible on smaller screens when typing.
On mobile size screens the search bar was being hidden when the user starts
typing, as the results were covering the top of the screen.

--- a/standards-catalogue/source/stylesheets/modules/_search.scss
+++ b/standards-catalogue/source/stylesheets/modules/_search.scss
@@ -34,7 +34,8 @@ html.has-search-results-open {
 
 .search-results {
     position: absolute;
-    top: 60px;
+    top: 200px;
+    top: 12.5rem;
     left: 0;
     right: 0;
     bottom: 0;
